src/test/ui/self/arbitrary_self_types_pin_lifetime_impl_trait-async.stderr
error: cannot infer an appropriate lifetime
  --> $DIR/arbitrary_self_types_pin_lifetime_impl_trait-async.rs:8:16
   |
LL |     async fn f(self: Pin<&Self>) -> impl Clone { self }
   |                ^^^^  ----------     ---------- ...and required to be `'static` by this
   |                |     |
   |                |     this data with the anonymous lifetime `'_`...
   |                ...is captured here...

error: aborting due to previous error

